--- a/scss/components/cards/editorial-card-overlay.scss
+++ b/scss/components/cards/editorial-card-overlay.scss
@@ -2,6 +2,7 @@
 
     .card-title-wrap {
         background-color: #FFFFFF;
+        pointer-events: auto;
 
         .card-text {
             color:       $body-color;
